# soul-chat

./: .gitignore  package-lock.json  package.json
apps/web/: .env.example  README.md  dev-server.ts  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
apps/web/api/: ask.ts  health.ts  media.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: ChatInput.tsx  ChatMessage.tsx  Disclaimer.tsx  EmptyState.tsx  Header.tsx  LoadingDots.tsx  MediaPanel.tsx  QuoteCard.tsx
apps/web/src/hooks/: useChat.ts
apps/web/src/lib/: api.ts  i18n.ts  media-proxy.ts
ingestion/: .env.example  README.md  books_keys.example.txt  books_keys.txt  pyproject.toml  schema.sql
ingestion/migrations/: 001_hnsw_and_rls.sql
ingestion/src/datasources/: bhajans.json  media-gallery.json
ingestion/src/maa_ingest/: __main__.py  check.py  chunker.py  cli.py  config.py  db.py  embedder.py  init_db.py  pdf_extract.py  reset_data.py  s3_list.py  sync.py
services/retrieval/: package.json  tsconfig.json
services/retrieval/src/: db.ts  index.ts  media.ts  prompt.ts  rate-limit.ts  sanitize-output.ts  search.ts  validate.ts
